:memo: Fix discord link